--- a/peernet/package.json
+++ b/peernet/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "@arcana/auth": "^1.0.1",
+    "@arcana/auth-react": "^0.0.3",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@choc-ui/logo": "^1.0.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@superfluid-finance/sdk-core": "^0.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^6.0.4",
+    "bootstrap": "^5.2.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^9.0.4",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
