--- a/peernet/package.json
+++ b/peernet/package.json
@@ -18,12 +18,15 @@
     "bootstrap": "^5.2.3",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
+    "fast-speedtest-api": "^0.3.2",
     "framer-motion": "^9.0.4",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-internet-meter": "^1.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
