--- a/peernet/package.json
+++ b/peernet/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "crypto-browserify": "^3.12.0",
+    "d3": "^7.8.2",
     "ethers": "^5.7.2",
     "fast-speedtest-api": "^0.3.2",
     "framer-motion": "^9.0.4",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-internet-meter": "^1.1.1",
+    "react-p5-wrapper": "^4.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
